plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

// The Minecraft version travels in the SemVer build-metadata field, so the jar comes
// out as florafare-1.3.0+1.21.1.jar and fabric.mod.json reports the same string. This
// is the Fabric/Modrinth convention, and it is what lets one GitHub release hold
// builds for several game versions without the files being told apart only by upload
// order. Set before the first release on purpose — renaming published artifacts
// afterwards breaks anyone's existing download links.
version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = rootProject.name
}

repositories {
	// AppleSkin (optional integration)
	maven { url "https://maven.ryanliptak.com/" }
	// Cloth Config (bundled via jar-in-jar for the ModMenu config screen)
	maven { url "https://maven.shedaniel.me/" }
	// ModMenu (optional integration)
	maven { url "https://maven.terraformersmc.com/" }
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// AppleSkin: compile-only so the dev client doesn't try to load it (it needs
	// Cloth Config at runtime, which we don't provide). At distribution time it stays
	// optional — our integration class is only loaded via AppleSkin's own "appleskin"
	// entrypoint, which only fires when AppleSkin is installed.
	modCompileOnly "squeek.appleskin:appleskin-fabric:${project.appleskin_version}"
	// Present in the dev client so the integration is actually exercised by runClient:
	// the tooltip row, the hunger-bar preview and the FoodValuesEvent hand-off all only
	// happen when AppleSkin is really there. It stays modCompileOnly for distribution,
	// so the built jar neither bundles nor requires it.
	modLocalRuntime "squeek.appleskin:appleskin-fabric:${project.appleskin_version}"

	// Cloth Config: bundled via jar-in-jar ("include") so the ModMenu config screen
	// always has it available at runtime, without forcing users to install it
	// separately or making it a hard mod dependency.
	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
		exclude group: "net.fabricmc.fabric-api"
	}
	include "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"

	// EMI: optional, same shape as the AppleSkin integration. The ":api" classifier
	// is a stub jar with only EMI's public API, which is exactly what the plugin
	// class compiles against; the full jar goes in as a dev-runtime mod so the
	// integration can actually be exercised in runClient.
	modCompileOnly "dev.emi:emi-fabric:${project.emi_version}:api"
	modLocalRuntime "dev.emi:emi-fabric:${project.emi_version}"

	// ModMenu: genuinely optional. compileOnly so the "modmenu" entrypoint class
	// compiles against its API, modLocalRuntime so it's present in the dev client;
	// neither bundles it into the built jar or requires it at distribution time.
	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
	modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"

	// Unit tests for the pure logic — config resolution and NBT round-trips — which
	// need Minecraft's NBT/Identifier classes on the classpath (Loom already puts them
	// there) but never boot the game.
	testImplementation platform("org.junit:junit-bom:${project.junit_version}")
	testImplementation "org.junit.jupiter:junit-jupiter"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
	useJUnitPlatform()

	// Anything that logs through the mod's LOGGER goes out via Minecraft's log4j
	// setup, which writes logs/latest.log relative to the working directory. Left at
	// the default that drops a stray logs/ folder in the repo root on every test run.
	workingDir = layout.buildDirectory.dir("test-run").get().asFile
	doFirst { workingDir.mkdirs() }
	testLogging {
		events "failed"
		exceptionFormat "full"
	}
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Must match the toolchain and sourceCompatibility below, the mixin config's
	// compatibilityLevel, and fabric.mod.json's "java" dependency. options.release
	// wins over sourceCompatibility, so a stale 17 here silently compiled the whole
	// mod to Java 17 bytecode while every other declaration claimed 21.
	it.options.release = 21
}

java {
	// Pin the toolchain so compilation AND the dev client (runClient) use a real
	// JDK 21 — the version MC 1.21.1 targets — even when the PATH/Gradle JVM is
	// newer. Java 24+ triggers JNA native-access warnings, sun.misc.Unsafe
	// deprecation warnings, and LWJGL "Unsupported JNI version" errors.
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}

	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {

	}
}
